<resources>
    <string name="app_name">AppListaCurso</string>
    <string name="txt_titulo_app">Aplicativo Lista VIP Curso Android</string>
    <string name="txt_hint_primeiro_nome">Primeiro Nome</string>
    <string name="txt_hint_sobrenome">Sobrenome</string>
    <string name="btn_limpar">LIMPAR</string>
    <string name="btn_salvar">SALVAR</string>
    <string name="btn_finalizar">FINALIZAR</string>
    <string name="txt_nome_do_curso">Nome do Curso Desejado</string>
    <string name="txt_telefone_contato">Telefone de Contato</string>
    <string name="textEscolha">Escolha o Curso Desejado:</string>

</resources>